change content type of captcha message to image/png
Signed-off-by: FTF1IMB <Florian.Fendt@bosch-si.com>

--- a/rest-to-websocket/index.html
+++ b/rest-to-websocket/index.html
@@ -25,7 +25,10 @@
 
     <nav class="navbar navbar-expand-md fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Eclipse Ditto: REST to WebSocket Demonstrator</a>
+            <a class="navbar-brand" href="#">
+                <img src="img/ditto_allwhite_symbolonly.svg" style="max-height: 40px; margin-right: 1rem;">
+                Eclipse Ditto: REST to WebSocket Demonstrator
+            </a>
         </div>
     </nav>
 
@@ -96,7 +99,7 @@
             <div class="col-12 col-md-2" id="ditto">
                 <div class="row" id="first-border"></div>
                 <div class="row justify-content-center">
-                    <img src="docs/images/ditto.svg">
+                    <img src="img/ditto.svg">
                 </div>
                 <div class="row" id="second-border"></div>
             </div>
