--- a/mqtt-bidirectional/iot-frontend/public/index.html
+++ b/mqtt-bidirectional/iot-frontend/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon-16x16.png">
-    <title>frontend-ditto</title>
+    <title>MQTT Example Frontend</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but frontend-ditto doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but MQTT Example Frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
