--- a/rest-to-websocket/index.html
+++ b/rest-to-websocket/index.html
@@ -1,3 +1,15 @@
+<!--
+  ~ Copyright (c) 2017 Contributors to the Eclipse Foundation
+  ~
+  ~ See the NOTICE file(s) distributed with this work for additional
+  ~ information regarding copyright ownership.
+  ~
+  ~ This program and the accompanying materials are made available under the
+  ~ terms of the Eclipse Public License 2.0 which is available at
+  ~ http://www.eclipse.org/legal/epl-2.0
+  ~
+  ~ SPDX-License-Identifier: EPL-2.0
+  -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,17 +17,6 @@
     <title>Eclipse Ditto: REST to WebSocket Demonstrator</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--
-    Copyright (c) 2017 Bosch Software Innovations GmbH.
-
-    All rights reserved. This program and the accompanying materials
-    are made available under the terms of the Eclipse Public License v2.0
-    which accompanies this distribution, and is available at
-    https://www.eclipse.org/org/documents/epl-2.0/index.php
-
-    Contributors:
-    Bosch Software Innovations GmbH - initial contribution
-    -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="style.css">
